# landingplatform

./: landing_test.launch
ar_drone2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
ar_drone2/msg/: Navdata.msg
ar_drone2/msg_gen/lisp/: Navdata.lisp  ar_drone2-msg.asd
ar_drone2/src/: teleop.cpp
ar_drone2/src/control/: CDecoder.cpp  CDecoder.h  CImageClient.cpp  app.h  at_cmds.cpp
ardrone2/: CMakeLists.txt  package.xml
ardrone2/msg_gen/lisp/: _package.lisp  _package_Navdata.lisp
ardrone2/src/: node.cpp
ardrone2/src/control/: CImageClient.h  navdata.cpp  stream.cpp
auto_land/: CMakeLists.txt  package.xml
auto_land/src/: auto_land_controller.py  auto_land_keyboard.py
autoland_pid/: CMakeLists.txt  README.md  package.xml  test
autoland_pid/StepperDriver/: BasicStepperDriver.cpp  BasicStepperDriver.h  README.md
autoland_pid/arduino_code/: arduino_code.ino
autoland_pid/bundle/: tagsbundle.xml
autoland_pid/launch/: alvar.launch  landing_test.launch  manual_control.launch  pid_control.launch
autoland_pid/src/: PD.py  PDtuning.py  PID.py  PIDtum.py  ardrone_control_debug.py  ardrone_control_interface.py  ardrone_control_reset.py  ardrone_nav_interface.py  ardrone_pid_timer.py  drone_controller.py  drone_video_display.py  joystick_controller.py  keyboard_controller.py  pid_drone_controller.py  pid_drone_controller2.py  pid_drone_controller3.py  pid_drone_controller4.py  quadcopter_pid_control.py
autoland_pid/xbee_serials/: serials
helisimple_2_r480/src/: export.sh  readme
(+4 files in other folders)
