<?xml version="1.0"?>
<package>
  <name>auto_land</name>
  <version>0.0.0</version>
  <description>Autonomously land the copter on the landing pad. It locates the location of the tracker and send the coordinates to tum_ardrone's autopilot.</description>

  <maintainer email="thanhnha@mit.edu">nha</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tum_ardrone</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
